<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/tv_aboutus1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/tv_aboutus2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_3"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/tv_aboutus3"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="Kundan Singh Sengar
Plot no 22 and 23,
Near Prayag Vidya Mandir,
Gangapur Colony, Yashoda Nagar,
Kanpur, U.P – 208011
"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:id="@+id/tv_address"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Or send us a message "
                android:textColor="@color/black"
                android:id="@+id/tv_e_id"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Click here"
                android:id="@+id/tv_link"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>