<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="Profile Form"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/iv_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/user_profile"
                        app:border_color="#FF000000" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="browse.."
                        android:id="@+id/btn_browse"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/custom_button"/>
                    </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/hint_name" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:layout_marginLeft="3dp"
                    android:id="@+id/tv_gender"
                    android:textSize="@dimen/text_size" />

                <GridView
                    android:id="@+id/gv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="2"></GridView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/dp_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/hint_dob" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/hint_email" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_mob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/hint_phone" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:orientation="horizontal">-->


                <!--<TextView-->
                    <!--android:layout_width="150dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="Mobile "-->
                    <!--android:id="@+id/tv_mobile"-->
                    <!--android:textSize="@dimen/text_size" />-->

                <!--<EditText-->
                    <!--android:id="@+id/et_mobile"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="mobile "-->
                    <!--android:inputType="phone"-->
                    <!--android:singleLine="true"-->
                    <!--android:textSize="@dimen/text_size"></EditText>-->
            <!--</LinearLayout>-->
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:orientation="horizontal">-->


                <!--<TextView-->
                    <!--android:layout_width="150dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="Password "-->
                    <!--android:id="@+id/tv_password"-->
                    <!--android:textSize="@dimen/text_size" />-->

                <!--<EditText-->
                    <!--android:id="@+id/et_password"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="password "-->
                    <!--android:inputType="textPassword"-->
                    <!--android:singleLine="true"-->
                    <!--android:textSize="@dimen/text_size"></EditText>-->
            <!--</LinearLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_size"
                        android:hint="@string/hint_password" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Who are you?"
                    android:id="@+id/tv_who"
                    android:textSize="@dimen/text_size" />

                <ListView
                    android:id="@+id/lv_st"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:listSelector="@drawable/custom_button"
                    android:divider="@null"></ListView>
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/custom_button"
                android:padding="12dp"
                android:text="Register" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>